--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Philips India | Health Technology Leader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/home/style.css" />
+    <link rel="stylesheet" href="home/style.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
       <div class="logo-wrapper">
         <a href="/home/index.html">
           <img
-            src="/assets/philips-logo-png-transparent.png"
+            src="assets/philips-logo-png-transparent.png"
             alt="Philips Logo"
           />
         </a>
