Update title and logo image path in index.html

--- a/home/index.html
+++ b/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Philips India | Health Technology Leader</title>
+    <title>Philips India Lighting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -14,7 +14,7 @@
       <div class="logo-wrapper">
         <a href="/home/index.html">
           <img
-            src="assets/philips-logo-png-transparent.png"
+            src="/assets/philips-logo-png-transparent.png"
             alt="Philips Logo"
           />
         </a>
