--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Philips India Lighting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/philipfuturelighting24/home/style.css" />
   </head>
 
   <body>
@@ -12,7 +12,7 @@
     <!-- ===== NAVBAR (LOGO ONLY) ===== -->
     <nav class="navbar">
       <div class="logo-wrapper">
-        <a href="/home/index.html">
+        <a href="/philipfuturelighting24/home/index.html">
           <img
             src="/philipfuturelighting24/assets/philips-logo-png-transparent.png"
             alt="Philips Logo"
@@ -56,7 +56,7 @@
             </p>
           </div>
           <div>
-            <img src="/assets/philips-ind.jpg" alt="Philips Headquarters" />
+            <img src="/philipfuturelighting24/assets/philips-ind.jpg" alt="Philips Headquarters" />
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="segment-grid">
         <div class="segment-card">
           <img
-            src="/assets/Residential-Lighting-Philips.jpg"
+            src="/philipfuturelighting24/assets/Residential-Lighting-Philips.jpg"
             alt="Residential Lighting"
           />
           <h3>Residential Lighting</h3>
@@ -81,7 +81,7 @@
 
         <div class="segment-card">
           <img
-            src="/assets/Commercial-Lighting-Philips.jpeg"
+            src="/philipfuturelighting24/assets/Commercial-Lighting-Philips.jpeg"
             alt="Commercial Lighting"
           />
           <h3>Commercial Lighting</h3>
@@ -93,7 +93,7 @@
 
         <div class="segment-card">
           <img
-            src="/assets/Energy-Efficient-Philips.jpeg"
+            src="/philipfuturelighting24/assets/Energy-Efficient-Philips.jpeg"
             alt="Energy Efficient Solutions"
           />
           <h3>Energy Efficient Solutions</h3>
@@ -124,7 +124,7 @@
         </ul>
 
         <img
-          src="/assets/Philips Innovation Campus – Bengaluru.jpg"
+          src="/philipfuturelighting24/assets/Philips Innovation Campus – Bengaluru.jpg"
           alt="Philips India Campus"
           class="india-img"
         />
@@ -135,7 +135,7 @@
     <section class="leadership">
       <h2>Leadership</h2>
       <div class="leader-card">
-        <img src="/assets/roy-jakobs-ceo-philips.webp" alt="Roy Jakobs CEO" />
+        <img src="/philipfuturelighting24/assets/roy-jakobs-ceo-philips.webp" alt="Roy Jakobs CEO" />
         <div>
           <h3>Roy Jakobs</h3>
           <p>Chief Executive Officer</p>
@@ -153,22 +153,22 @@
 
       <div class="investor-grid">
         <div class="investor-card">
-          <img src="/assets/exor-philips.png" alt="Exor" />
+          <img src="/philipfuturelighting24/assets/exor-philips.png" alt="Exor" />
           <p>Exor N.V. – 19.2%</p>
         </div>
 
         <div class="investor-card">
-          <img src="/assets/Artison-philips.png" alt="Artisan Partners" />
+          <img src="/philipfuturelighting24/assets/Artison-philips.png" alt="Artisan Partners" />
           <p>Artisan Partners – 9.9%</p>
         </div>
 
         <div class="investor-card">
-          <img src="/assets/blackrock-philips.jpeg" alt="BlackRock" />
+          <img src="/philipfuturelighting24/assets/blackrock-philips.jpeg" alt="BlackRock" />
           <p>BlackRock – 4.25%</p>
         </div>
 
         <div class="investor-card">
-          <img src="/assets/vanguard-philips.png" alt="Vanguard" />
+          <img src="/philipfuturelighting24/assets/vanguard-philips.png" alt="Vanguard" />
           <p>The Vanguard Group – 3.56%</p>
         </div>
       </div>
@@ -176,10 +176,10 @@
 
     <!-- ===== BOTTOM MOBILE NAVIGATION ===== -->
     <nav class="bottom-nav">
-      <a href="/home/index.html" class="nav-btn active">Home</a>
-      <a href="/products/index.html" class="nav-btn">Products</a>
-      <a href="/referrals/index.html" class="nav-btn">Referrals</a>
-      <a href="/profile/index.html" class="nav-btn">Profile</a>
+      <a href="/philipfuturelighting24/home/index.html" class="nav-btn active">Home</a>
+      <a href="/philipfuturelighting24/products/index.html" class="nav-btn">Products</a>
+      <a href="/philipfuturelighting24/referrals/index.html" class="nav-btn">Referrals</a>
+      <a href="/philipfuturelighting24/profile/index.html" class="nav-btn">Profile</a>
     </nav>
   </body>
 </html>
