Add image to hero section in index.html

--- a/home/index.html
+++ b/home/index.html
@@ -31,6 +31,7 @@
 
     <!-- ===== HERO ===== -->
     <section class="hero">
+      <img src="../assets/philips-ind.jpg" style="width:300px;">
       <div class="hero-overlay">
         <h1>Lighting the Future with Philips LED</h1>
         <p>
