--- a/profile/index.html
+++ b/profile/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profile | Philips India</title>
 
-  <link rel="stylesheet" href="./home/style.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../home/style.css" />
+  <link rel="stylesheet" href="../profile/style.css" />
 </head>
 
 <body>
@@ -14,8 +14,8 @@
   <!-- ===== NAVBAR ===== -->
   <nav class="navbar">
     <div class="logo-wrapper">
-      <a href="/home/index.html">
-        <img src="/assets/philips-logo-png-transparent.png" alt="Philips Logo" />
+      <a href="../home/index.html">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo" />
       </a>
       <div class="led-dots">
         <span></span>
@@ -34,7 +34,7 @@
       <div class="profile-top">
         <div class="profile-img small">
           <img 
-            src="/assets/bulb10watts.webp"
+            src="../assets/bulb10watts.webp"
             onerror="this.src='https://cdn-icons-png.flaticon.com/512/149/149071.png'"
             alt="Profile"
           />
@@ -53,11 +53,11 @@
 
       <!-- ACTION BUTTONS -->
       <div class="action-buttons">
-        <a href="/wallet/recharge.html" class="action-btn recharge">
+        <a href="../wallet/recharge.html" class="action-btn recharge">
           💡 Recharge
         </a>
 
-        <a href="/wallet/withdraw.html" class="action-btn withdraw">
+        <a href="../wallet/withdraw.html" class="action-btn withdraw">
           💸 Withdrawal
         </a>
       </div>
@@ -67,22 +67,22 @@
     <!-- ACCOUNT OPTIONS -->
     <div class="profile-card menu-card">
 
-      <a href="/auth/forgot-password.html" class="menu-item">
+      <a href="../auth/forgot-password.html" class="menu-item">
         🔐 Forgot Password
         <span>›</span>
       </a>
 
-      <a href="/wallet/bind-card.html" class="menu-item">
+      <a href="../wallet/bind-card.html" class="menu-item">
         💳 My Card (Bind Bank Account)
         <span>›</span>
       </a>
 
-      <a href="/wallet/history.html" class="menu-item">
+      <a href="../wallet/history.html" class="menu-item">
         📄 Transaction History
         <span>›</span>
       </a>
 
-      <a href="/referrals/index.html" class="menu-item">
+      <a href="../referrals/index.html" class="menu-item">
         🎁 Referral / Invite
         <span>›</span>
       </a>
@@ -97,12 +97,12 @@
 
   <!-- ===== BOTTOM NAV ===== -->
   <nav class="bottom-nav">
-    <a href="/home/index.html" class="nav-btn">Home</a>
-    <a href="/products/index.html" class="nav-btn">Products</a>
-    <a href="/referrals/index.html" class="nav-btn">Referrals</a>
-    <a href="/profile/index.html" class="nav-btn active">Profile</a>
+    <a href="../home/index.html" class="nav-btn">Home</a>
+    <a href="../products/index.html" class="nav-btn">Products</a>
+    <a href="../referrals/index.html" class="nav-btn">Referrals</a>
+    <a href="../profile/index.html" class="nav-btn active">Profile</a>
   </nav>
 
-  <script src="/profile/script.js"></script>
+  <script src="../profile/script.js"></script>
 </body>
 </html>
