--- a/auth/index.html
+++ b/auth/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/auth/style.css">
+  <link rel="stylesheet" href="../auth/style.css">
 </head>
 <body>
 
@@ -20,11 +20,11 @@
     </form>
 
     <p>Don't have an account?
-      <a href="register.html">Register</a>
+      <a href="../auth/register.html">Register</a>
     </p>
   </div>
 
   <!-- JS -->
-  <script src="/auth/script.js"></script>
+  <script src="../auth/script.js"></script>
 </body>
 </html>
