--- a/auth/register.html
+++ b/auth/register.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Link CSS -->
-  <link rel="stylesheet" href="/auth/register.css">
+  <link rel="stylesheet" href="../auth/register.css">
 </head>
 <body>
 
@@ -22,11 +22,11 @@
     </form>
 
     <p>Already have an account?
-      <a href="index.html">Login</a>
+      <a href="../auth/index.html">Login</a>
     </p>
   </div>
 
   <!-- Link JS -->
-  <script src="/auth/register.js"></script>
+  <script src="../auth/register.js"></script>
 </body>
 </html>
