--- a/wallet/recharge.html
+++ b/wallet/recharge.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recharge | Philips India</title>
 
-  <link rel="stylesheet" href="/home/style.css">
-  <link rel="stylesheet" href="/wallet/wallet.css">
+  <link rel="stylesheet" href="../home/style.css">
+  <link rel="stylesheet" href="../wallet/wallet.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
   <!-- ===== NAVBAR ===== -->
   <nav class="navbar">
     <div class="logo-wrapper">
-      <a href="/home/index.html">
-        <img src="/assets/philips-logo-png-transparent.png" alt="Philips Logo">
+      <a href="../home/index.html">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
       </a>
     </div>
   </nav>
@@ -55,7 +55,7 @@
 
   <!-- ===== SCRIPTS ===== -->
   <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
-  <script src="/wallet/recharge.js"></script>
+  <script src="../wallet/recharge.js"></script>
 
 </body>
 </html>
