--- a/wallet/withdraw.html
+++ b/wallet/withdraw.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Withdraw | Philips India</title>
 
-  <link rel="stylesheet" href="/home/style.css">
-  <link rel="stylesheet" href="/wallet/wallet.css">
+  <link rel="stylesheet" href="../home/style.css">
+  <link rel="stylesheet" href="../wallet/wallet.css">
 </head>
 
 <body>
 
   <nav class="navbar">
     <div class="logo-wrapper">
-      <a href="/home/index.html">
+      <a href="../home/index.html">
         <img src="/assets/philips-logo-png-transparent.png" alt="Philips Logo">
       </a>
     </div>
@@ -60,6 +60,6 @@
   <!-- ===== TOAST ===== -->
   <div id="customToast" class="custom-toast"></div>
 
-  <script src="/wallet/withdraw.js"></script>
+  <script src="../wallet/withdraw.js"></script>
 </body>
 </html>
