--- a/wallet/withdraw.html
+++ b/wallet/withdraw.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="logo-wrapper">
       <a href="../home/index.html">
-        <img src="/assets/philips-logo-png-transparent.png" alt="Philips Logo">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
       </a>
     </div>
   </nav>
