--- a/products/index.html
+++ b/products/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/home/style.css" />
+    <link rel="stylesheet" href="../home/style.css" />
     <link rel="stylesheet" href="/products/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,9 +11,9 @@
     <!-- ===== NAVBAR (LOGO ONLY) ===== -->
     <nav class="navbar">
       <div class="logo-wrapper">
-        <a href="/home/index.html">
+        <a href="../home/index.html">
           <img
-            src="/assets/philips-logo-png-transparent.png"
+            src="../assets/philips-logo-png-transparent.png"
             alt="Philips Logo"
           />
         </a>
@@ -36,7 +36,7 @@
     <section class="pricing-container">
       <div class="card">
         <div class="card-image">
-          <img src="/assets/bulb0.5watts.jpg" alt="Bulb" />
+          <img src="../assets/bulb0.5watts.jpg" alt="Bulb" />
         </div>
         <div class="card-content">
           <h2>0.5W LED Bulb</h2>
@@ -48,7 +48,7 @@
 
       <div class="card">
         <div class="card-image">
-          <img src="/assets/bulb5watts.jpg" alt="Bulb" />
+          <img src="../assets/bulb5watts.jpg" alt="Bulb" />
         </div>
         <div class="card-content">
           <h2>5W Smart Bulb</h2>
@@ -60,7 +60,7 @@
 
       <div class="card">
         <div class="card-image">
-          <img src="/assets/bulb10watts.webp" alt="Bulb" />
+          <img src="../assets/bulb10watts.webp" alt="Bulb" />
         </div>
         <div class="card-content">
           <h2>10W LED Bulb</h2>
@@ -72,7 +72,7 @@
 
       <div class="card">
         <div class="card-image">
-          <img src="/assets/philips-health.jpg" alt="Light" />
+          <img src="../assets/philips-health.jpg" alt="Light" />
         </div>
         <div class="card-content">
           <h2>Decorative Light</h2>
@@ -106,12 +106,12 @@
 
     <!-- ===== BOTTOM MOBILE NAVIGATION ===== -->
     <nav class="bottom-nav">
-      <a href="/home/index.html" class="nav-btn active">Home</a>
-      <a href="/products/index.html" class="nav-btn">Products</a>
-      <a href="/referrals/index.html" class="nav-btn">Referrals</a>
-      <a href="/profile/index.html" class="nav-btn">Profile</a>
+      <a href="../home/index.html" class="nav-btn active">Home</a>
+      <a href="../products/index.html" class="nav-btn">Products</a>
+      <a href="../referrals/index.html" class="nav-btn">Referrals</a>
+      <a href="../profile/index.html" class="nav-btn">Profile</a>
     </nav>
 
-    <script src="/products/script.js"></script>
+    <script src="../products/script.js"></script>
   </body>
 </html>
