--- a/products/index.html
+++ b/products/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../home/style.css" />
-    <link rel="stylesheet" href="/products/style.css" />
+    <link rel="stylesheet" href="../products/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products | Philips</title>
