--- a/referrals/index.html
+++ b/referrals/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/home/style.css" />
-    <link rel="stylesheet" href="/referrals/style.css" />
+    <link rel="stylesheet" href="../home/style.css" />
+    <link rel="stylesheet" href="../referrals/style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Philips - India</title>
@@ -12,9 +12,9 @@
 <!-- ===== NAVBAR (LOGO ONLY) ===== -->
 <nav class="navbar">
   <div class="logo-wrapper">
-    <a href="/home/index.html">
+    <a href="../home/index.html">
       <img
-        src="/assets/philips-logo-png-transparent.png"
+        src="../assets/philips-logo-png-transparent.png"
         alt="Philips Logo"
       />
     </a>
@@ -69,10 +69,10 @@
 
   <!-- ===== BOTTOM MOBILE NAVIGATION ===== -->
   <nav class="bottom-nav">
-    <a href="/home/index.html" class="nav-btn active">Home</a>
-    <a href="/products/index.html" class="nav-btn">Products</a>
-    <a href="/referrals/index.html" class="nav-btn">Referrals</a>
-    <a href="/profile/index.html" class="nav-btn">Profile</a>
+    <a href="../home/index.html" class="nav-btn active">Home</a>
+    <a href="../products/index.html" class="nav-btn">Products</a>
+    <a href="../referrals/index.html" class="nav-btn">Referrals</a>
+    <a href="../profile/index.html" class="nav-btn">Profile</a>
   </nav>
 
   <script>
@@ -82,6 +82,6 @@
     }
     </script>
 
-<script src="/referrals/script.js"></script>
+<script src="../referrals/script.js"></script>
 </body>
 </html>
