Fix link to transaction history page

--- a/profile/index.html
+++ b/profile/index.html
@@ -77,7 +77,7 @@
         <span>›</span>
       </a>
 
-      <a href="../wallet/transaction.html" class="menu-item">
+      <a href="../wallet/transactions.html" class="menu-item">
         📄 Transaction History
         <span>›</span>
       </a>
