--- a/admin/login.html
+++ b/admin/login.html
@@ -15,15 +15,10 @@
 
       <!-- ✅ Proper Form -->
       <form id="adminLoginForm">
-
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Password" required>
-
-        <button type="submit">Login</button>
-
-        <p class="error" id="error"></p>
-
-      </form>
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+  <button type="submit">Login</button>
+</form>
 
     </div>
   </div>
