--- a/admin/login.html
+++ b/admin/login.html
@@ -4,25 +4,59 @@
   <meta charset="UTF-8">
   <title>Admin Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Login CSS -->
   <link rel="stylesheet" href="./css/login.css">
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 
 <body>
 
   <div class="login-container">
     <div class="login-box">
-      <h2>Admin Login</h2>
+      <h2><i class="fa-solid fa-user-shield"></i> Admin Login</h2>
 
-      <!-- ✅ Proper Form -->
       <form id="adminLoginForm">
-  <input type="email" id="email" placeholder="Email">
-  <input type="password" id="password" placeholder="Password">
-  <button type="submit">Login</button>
-</form>
+
+        <!-- Email Field -->
+        <div class="input-group">
+          <i class="fa-solid fa-envelope"></i>
+          <input 
+            type="email" 
+            id="email" 
+            placeholder="Email"
+            required
+          >
+        </div>
+
+        <!-- Password Field -->
+        <div class="input-group">
+          <i class="fa-solid fa-lock"></i>
+          <input 
+            type="password" 
+            id="password" 
+            placeholder="Password"
+            required
+          >
+        </div>
+
+        <!-- Error Message -->
+        <p id="error" class="error-text"></p>
+
+        <!-- Login Button -->
+        <button type="submit">
+          <i class="fa-solid fa-right-to-bracket"></i>
+          Login
+        </button>
+
+      </form>
 
     </div>
   </div>
 
   <script src="./js/login.js"></script>
+
 </body>
 </html>
