--- a/auth/index.html
+++ b/auth/index.html
@@ -7,24 +7,46 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="../auth/style.css">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
   <div class="login-container">
-    <h2>Login</h2>
+
+    <h2>
+      <i class="fa-solid fa-right-to-bracket"></i>
+      Login
+    </h2>
 
     <form id="loginForm">
-      <input type="text" id="mobile" placeholder="Mobile Number" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
+
+      <div class="input-group">
+        <i class="fa-solid fa-phone"></i>
+        <input type="text" id="mobile" placeholder="Mobile Number" required>
+      </div>
+
+      <div class="input-group">
+        <i class="fa-solid fa-lock"></i>
+        <input type="password" id="password" placeholder="Password" required>
+      </div>
+
+      <button type="submit">
+        <i class="fa-solid fa-arrow-right"></i>
+        Login
+      </button>
+
     </form>
 
     <p>Don't have an account?
       <a href="../auth/register.html">Register</a>
     </p>
+
   </div>
 
   <!-- JS -->
   <script src="../auth/script.js"></script>
+
 </body>
 </html>
