--- a/auth/register.html
+++ b/auth/register.html
@@ -5,28 +5,56 @@
   <title>Register | Philips</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Link CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../auth/register.css">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
 
   <div class="register-container">
-    <h2>Create Account</h2>
+
+    <h2>
+      <i class="fa-solid fa-user-plus"></i>
+      Create Account
+    </h2>
 
     <form id="registerForm">
-      <input type="text" id="name" placeholder="Full Name" required>
-      <input type="email" id="email" placeholder="Email Address" required>
-      <input type="text" id="mobile" placeholder="Mobile Number" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Register</button>
+
+      <div class="input-group">
+        <i class="fa-solid fa-user"></i>
+        <input type="text" id="name" placeholder="Full Name" required>
+      </div>
+
+      <div class="input-group">
+        <i class="fa-solid fa-envelope"></i>
+        <input type="email" id="email" placeholder="Email Address" required>
+      </div>
+
+      <div class="input-group">
+        <i class="fa-solid fa-phone"></i>
+        <input type="text" id="mobile" placeholder="Mobile Number" required>
+      </div>
+
+      <div class="input-group">
+        <i class="fa-solid fa-lock"></i>
+        <input type="password" id="password" placeholder="Password" required>
+      </div>
+
+      <button type="submit">
+        <i class="fa-solid fa-user-check"></i>
+        Register
+      </button>
+
     </form>
 
     <p>Already have an account?
       <a href="../auth/index.html">Login</a>
     </p>
+
   </div>
 
-  <!-- Link JS -->
   <script src="../auth/register.js"></script>
 </body>
 </html>
