--- a/home/index.html
+++ b/home/index.html
@@ -1,187 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Philips India Lighting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <title>Philips India Lighting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- FIXED CSS PATH -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="style.css">
 
-  <body>
-    
-    <!-- ===== NAVBAR (LOGO ONLY) ===== -->
-    <nav class="navbar">
-      <div class="logo-wrapper">
-        <a href="index.html">
-          <img
-            src="../assets/philips-logo-png-transparent.png"
-            alt="Philips Logo"
-          />
-        </a>
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
 
-        <div class="led-dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+<body>
+
+  <!-- ===== NAVBAR ===== -->
+  <nav class="navbar">
+    <div class="logo-wrapper">
+      <a href="index.html">
+        <img src="../assets/philips-logo-png-transparent.png" alt="Philips Logo">
+      </a>
+
+      <div class="led-dots">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- ===== HERO ===== -->
-    <section class="hero">
-      <div class="hero-overlay">
-        <h1>Lighting the Future with Philips LED</h1>
-        <p>
-          Discover energy-efficient, long-lasting LED bulbs designed to brighten
-          homes, offices and commercial spaces.
-        </p>
-      </div>
-    </section>
+  <!-- ===== HERO ===== -->
+  <section class="hero">
+    <div class="hero-overlay">
+      <h1>Lighting the Future with Philips LED</h1>
+      <p>
+        Discover energy-efficient, long-lasting LED bulbs designed to brighten
+        homes, offices and commercial spaces.
+      </p>
+    </div>
+  </section>
 
-    <!-- ===== ABOUT ===== -->
-    <section class="about">
-      <div class="container">
-        <h2>About Philips</h2>
-        <div class="about-grid">
-          <div>
-            <p>
-              Founded in 1891 in Eindhoven, Netherlands by Gerard Philips and
-              Frederik Philips, the company evolved from a lamp factory into a
-              global health technology powerhouse.
-            </p>
-            <p>
-              In 2026, Philips focuses on the "health continuum" — spanning
-              healthy living, clinical diagnosis, connected care, and home
-              treatment.
-            </p>
-          </div>
-          <div>
-            <img src="../assets/philips-ind.jpg" alt="Philips Headquarters" />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ===== BUSINESS SEGMENTS ===== -->
-    <section class="business-segments">
-      <h2>Our Lighting Solutions</h2>
-
-      <div class="segment-grid">
-        <div class="segment-card">
-          <img
-            src="../assets/Residential-Lighting-Philips.jpg"
-            alt="Residential Lighting"
-          />
-          <h3>Residential Lighting</h3>
-          <p>
-            LED bulbs designed for homes, offering long life, energy savings,
-            and comfortable brightness.
-          </p>
-        </div>
-
-        <div class="segment-card">
-          <img
-            src="../assets/Commercial-Lighting-Philips.jpeg"
-            alt="Commercial Lighting"
-          />
-          <h3>Commercial Lighting</h3>
-          <p>
-            Reliable lighting solutions for offices, shops, and industrial
-            environments.
-          </p>
-        </div>
-
-        <div class="segment-card">
-          <img
-            src="../assets/Energy-Efficient-Philips.jpeg"
-            alt="Energy Efficient Solutions"
-          />
-          <h3>Energy Efficient Solutions</h3>
-          <p>
-            Low power consumption technology that reduces electricity bills
-            while maintaining high performance.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ===== PHILIPS INDIA ===== -->
-    <section class="india">
-      <div class="container">
-        <h2>Philips Lighting in India</h2>
-
-        <p>
-          Philips continues to expand its lighting presence across India,
-          delivering high-quality LED solutions for homes, offices, retail
-          spaces and industries.
-        </p>
-
-        <ul>
-          <li>Advanced LED technology for energy savings</li>
-          <li>Reliable and long-lasting bulb performance</li>
-          <li>Wide range of watt options for every need</li>
-          <li>Designed for Indian homes and commercial spaces</li>
-        </ul>
-
-        <img
-          src="../assets/Philips Innovation Campus – Bengaluru.jpg"
-          alt="Philips India Campus"
-          class="india-img"
-        />
-      </div>
-    </section>
-
-    <!-- ===== LEADERSHIP ===== -->
-    <section class="leadership">
-      <h2>Leadership</h2>
-      <div class="leader-card">
-        <img src="../assets/roy-jakobs-ceo-philips.webp" alt="Roy Jakobs CEO" />
+  <!-- ===== ABOUT ===== -->
+  <section class="about">
+    <div class="container">
+      <h2>About Philips</h2>
+      <div class="about-grid">
         <div>
-          <h3>Roy Jakobs</h3>
-          <p>Chief Executive Officer</p>
           <p>
-            Leading Philips’ transformation into a focused global health
-            technology company.
+            Founded in 1891 in Eindhoven, Netherlands by Gerard Philips and
+            Frederik Philips, the company evolved from a lamp factory into a
+            global health technology powerhouse.
+          </p>
+          <p>
+            In 2026, Philips focuses on the health continuum — spanning
+            healthy living, clinical diagnosis, connected care, and home treatment.
           </p>
         </div>
-      </div>
-    </section>
-
-    <!-- ===== INVESTORS ===== -->
-    <section class="investors">
-      <h2>Major Investors (2026)</h2>
-
-      <div class="investor-grid">
-        <div class="investor-card">
-          <img src="../assets/exor-philips.png" alt="Exor" />
-          <p>Exor N.V. – 19.2%</p>
-        </div>
-
-        <div class="investor-card">
-          <img src="../assets/Artison-philips.png" alt="Artisan Partners" />
-          <p>Artisan Partners – 9.9%</p>
-        </div>
-
-        <div class="investor-card">
-          <img src="../assets/blackrock-philips.jpeg" alt="BlackRock" />
-          <p>BlackRock – 4.25%</p>
-        </div>
-
-        <div class="investor-card">
-          <img src="../assets/vanguard-philips.png" alt="Vanguard" />
-          <p>The Vanguard Group – 3.56%</p>
+        <div>
+          <img src="../assets/philips-ind.jpg" alt="Philips Headquarters">
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- ===== BOTTOM MOBILE NAVIGATION ===== -->
-    <nav class="bottom-nav">
-      <a href="index.html" class="nav-btn active">Home</a>
-      <a href="../products/index.html" class="nav-btn">Products</a>
-      <a href="../referrals/index.html" class="nav-btn">Referrals</a>
-      <a href="../profile/index.html" class="nav-btn">Profile</a>
-    </nav>
-  </body>
+  <!-- ===== BUSINESS SEGMENTS ===== -->
+  <section class="business-segments">
+    <h2>Our Lighting Solutions</h2>
+
+    <div class="segment-grid">
+      <div class="segment-card">
+        <img src="../assets/Residential-Lighting-Philips.jpg" alt="">
+        <h3>Residential Lighting</h3>
+        <p>LED bulbs designed for homes, offering long life and energy savings.</p>
+      </div>
+
+      <div class="segment-card">
+        <img src="../assets/Commercial-Lighting-Philips.jpeg" alt="">
+        <h3>Commercial Lighting</h3>
+        <p>Reliable lighting solutions for offices and industries.</p>
+      </div>
+
+      <div class="segment-card">
+        <img src="../assets/Energy-Efficient-Philips.jpeg" alt="">
+        <h3>Energy Efficient Solutions</h3>
+        <p>Low power consumption with high performance.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== INDIA ===== -->
+  <section class="india">
+    <div class="container">
+      <h2>Philips Lighting in India</h2>
+      <p>
+        Philips continues to expand its lighting presence across India,
+        delivering high-quality LED solutions.
+      </p>
+
+      <ul>
+        <li>Advanced LED technology</li>
+        <li>Reliable and long-lasting</li>
+        <li>Wide watt options</li>
+        <li>Designed for Indian homes</li>
+      </ul>
+
+      <img src="../assets/Philips Innovation Campus – Bengaluru.jpg"
+           alt="Philips India Campus"
+           class="india-img">
+    </div>
+  </section>
+
+  <!-- ===== LEADERSHIP ===== -->
+  <section class="leadership">
+    <h2>Leadership</h2>
+    <div class="leader-card">
+      <img src="../assets/roy-jakobs-ceo-philips.webp" alt="Roy Jakobs">
+      <div>
+        <h3>Roy Jakobs</h3>
+        <p>Chief Executive Officer</p>
+        <p>Leading Philips’ transformation into global health technology.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== INVESTORS ===== -->
+  <section class="investors">
+    <h2>Major Investors (2026)</h2>
+    <div class="investor-grid">
+
+      <div class="investor-card">
+        <img src="../assets/exor-philips.png" alt="">
+        <p>Exor N.V. – 19.2%</p>
+      </div>
+
+      <div class="investor-card">
+        <img src="../assets/Artison-philips.png" alt="">
+        <p>Artisan Partners – 9.9%</p>
+      </div>
+
+      <div class="investor-card">
+        <img src="../assets/blackrock-philips.jpeg" alt="">
+        <p>BlackRock – 4.25%</p>
+      </div>
+
+      <div class="investor-card">
+        <img src="../assets/vanguard-philips.png" alt="">
+        <p>The Vanguard Group – 3.56%</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ===== PREMIUM BOTTOM NAV ===== -->
+  <nav class="bottom-nav">
+    <a href="index.html" class="nav-btn active">
+      <i class="fa-solid fa-house"></i>
+      <span>Home</span>
+    </a>
+
+    <a href="../products/index.html" class="nav-btn">
+      <i class="fa-solid fa-lightbulb"></i>
+      <span>Products</span>
+    </a>
+
+    <a href="../referrals/index.html" class="nav-btn">
+      <i class="fa-solid fa-gift"></i>
+      <span>Referrals</span>
+    </a>
+
+    <a href="../profile/index.html" class="nav-btn">
+      <i class="fa-solid fa-user"></i>
+      <span>Profile</span>
+    </a>
+  </nav>
+
+</body>
 </html>
